# tinyRender

./: CMakeLists.txt  README.md  camera.cpp  camera.h  geometry.cpp  geometry.h  global.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipline.h  renderThread.h  texture.h  tgaimage.cpp  tgaimage.h  vertex.cpp  vertex.h  window.cpp  window.h
headers/: frameBuffer.h
obj1/fuhua/: floor.mtl  fuhuaface.mtl
resources/: frameBuffer.cpp
shader/: shader.cpp  shader.h
